--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,9 @@
 <h1>Edit Article</h1>
 
+<% if logged_in? %>
+  Welcome <%= current_user.first_name %>
+<% end %> <br>
+
 <table>
   <tr>
     <th>Title</th>
