--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,17 +1,18 @@
-<h1>new title</h1>
+<h3>New Comments</h3>
 
 <% if logged_in? %>
   Welcome <%= current_user.first_name %>
 <% end %> <br>
 
-<%= form_for @article do |f| %>
+<%= form_for @comment , url: article_comments_path(@current_article), method: :post do |f| %>
   <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.label :commenter%><br>
+    <%= f.text_field :commenter, value: current_user.first_name, readonly: true %>
   </p>
+
   <p>
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
   </p>
   <p>
     <%= f.submit %><br>
