without article's are showing to visitors

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -25,11 +25,7 @@
     <% end %>
   </tr>
 </table>
-<br><br>
-<%= link_to "user index", users_path %>
-<br><br>
-<%= link_to "create new article ", new_article_path %>
+
 <br><br>
 <%= link_to "view all aritcles", articles_path %>
-<br><br>
-<%= link_to "sign_out", sign_out_users_path %>
+<%= render 'users/footer' %>
