--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -18,9 +18,4 @@
   </p>
 <% end %>
 
-<br><br>
-<%= link_to "user index", users_path %>
-<br><br>
-<%= link_to "view all aritcles", articles_path %>
-<br><br>
-<%= link_to "sign_out", sign_out_users_path %>
+<%= render 'users/footer' %>
