--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,4 +28,6 @@
 <% end %>
 
 <br><br>
-<%= link_to "index page", users_path %>
+<%= link_to "Sign in", sign_in_users_path %>
+<br><br>
+<%= link_to "Home Page", articles_path %>
