--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,10 @@
 
 <%= link_to "Sign in", sign_in_users_path %><br>
 
-<%= link_to "Sign up", new_user_path %>
+<%= link_to "Sign up", new_user_path %><br>
+
+<%= link_to "Home Page", articles_path %>
+
+<br><br>
 
 <%= image_tag "1.jpg", size: "250x250" %>
