--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,7 +23,4 @@
   </tr>
 </table>
 
-<br><br>
-<%= link_to "user index", users_path %>
-<br><br>
-<%= link_to "sign_out", sign_out_users_path %>
+<%= render 'footer' %>
