--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,11 +17,4 @@
   </tr>
 </table>
 
-<br><br>
-<%= link_to "user index", users_path %>
-<br><br>
-<%= link_to "create new article ", new_article_path %>
-<br><br>
-<%= link_to "view all aritcles", articles_path %>
-<br><br>
-<%= link_to "sign_out", sign_out_users_path %>
+<%= render 'footer' %>
