--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -17,26 +17,43 @@
   </tr>
 </table>
 
-<h3>Comments :- </h3>
-<% @comments.each do |comment| %>
+<h2>Make Comment</h2>
+<%= form_for @comment , url: article_comments_path(@article), method: :post do |f| %>
   <p>
-    <% if comment.is_visible_to_user?(current_user)  %>
-      <b>Commenter Name :- </b>
-      <%= comment.commenter %>
-      <% if comment.can_modify?(current_user) %>
-        <%= link_to "edit", edit_article_comment_path(@article, comment) %>
-        <%= link_to "delete", article_comment_path(@article, comment), method: :delete, data: { confirm: "Are you sure !!! "} %>
-      <% end %>
-      <% if comment.is_article_owner?(current_user) %>
-        <%= link_to "approve", approve_article_comment_path(@article, comment.id), method: :patch unless comment.approved %>
-      <% end %>
-      <br>
-      <b>Comment::- </b>
-      <%= comment.body %>
-    <% end %>
+    <%= f.label :commenter%><br>
+    <%= f.text_field :commenter, value: current_user.first_name, readonly: true %>
+  </p>
+  <p>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %><br>
   </p>
 <% end %>
 
-<br><br>
-<%= link_to "comment", new_article_comment_path(@article) %>
+<% if @comments.present? %>
+  <h4> No. of Comments :- <%= @article.comments.count %> </h4>
+  <h3> Older Comments :- </h3>
+  <% @comments.each do |comment| %>
+    <p>
+      <% if comment.is_visible_to_user?(current_user)  %>
+        <b>Commenter Name :- </b>
+        <%= comment.commenter %>
+        <% if comment.can_modify?(current_user) %>
+          <%= link_to "edit", edit_article_comment_path(@article, comment) %>
+          <%= link_to "delete", article_comment_path(@article, comment), method: :delete, data: { confirm: "Are you sure !!! "} %>
+        <% end %>
+        <% if comment.is_article_owner?(current_user) %>
+          <%= link_to "approve", approve_article_comment_path(@article, comment.id), method: :patch if !comment.new_record? and !comment.approved  %>
+        <% end %>
+        <br>
+        <b>Comment::- </b>
+        <%= comment.body %>
+      <% end %>
+    </p>
+  <% end %>
+<% end %>
+
+
 <%= render 'users/footer' %>
