--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -25,3 +25,9 @@
 <%= link_to "view all aritcles", articles_path %>
 <br><br>
 <%= link_to "sign_out", sign_out_users_path %>
+
+
+
+
+<br><br>
+<%= link_to "comment", new_article_comment_path(@article) %>
