--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,6 @@
 <h3>Edit User Details</h3>
 
-<% if logged_in? %>
-  Welcome <%= current_user.first_name %>
-<% end %> <br>
+<%= render 'welcome' %>
 
 <table>
   <tr>
