--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,8 +1,6 @@
 <h3>New Comments</h3>
 
-<% if logged_in? %>
-  Welcome <%= current_user.first_name %>
-<% end %> <br>
+<%= render 'users/welcome' %>
 
 <%= form_for @comment , url: article_comments_path(@current_article), method: :post do |f| %>
   <p>
