multiple comment with nested_form gem and ajax

--- a/app/views/articles/_view_article.html.erb
+++ b/app/views/articles/_view_article.html.erb
@@ -1,3 +1,5 @@
-<td><%= art.title.capitalize %></td>
-<td><%= art.description.first(20) %></td>
-<td> <%= link_to "view", art %> </td>
+<div class="col-lg-9">
+  <td><%= art.title.capitalize %></td>
+  <td><%= art.description.first(20) %></td>
+  <td> <%= link_to "view", art, class: "btn btn-info"  %> </td>
+</div>
