--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+
+/*
+ *= require bootstrap_and_overrides
+ */
+
+/* Your stylesheets goes here... */
