--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,5 @@
-<%= javascript_include_tag :defaults, "nested_form" %>
+
+
 
 <h1>new title</h1>
 
@@ -14,8 +15,6 @@
     <%= f.text_area :description %>
   </p>
   <p>
-    <%= f.submit %><br>
+    <%= f.submit class: "btn btn-success"  %><br>
   </p>
 <% end %>
-
-<%= render 'users/footer' %>
