--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,13 +3,13 @@
     <b>Commenter Name :- </b>
     <%= comment.commenter %>
     <% if comment.can_modify?(current_user) %>
-      <%= link_to "edit", edit_article_comment_path(article, comment) %>
-      <%= link_to "delete", article_comment_path(article, comment), method: :delete, data: { confirm: "Are you sure !!! "} %>
+      <%= link_to "edit", edit_article_comment_path(article, comment), class: "btn btn-warning"  %>
+      <%= link_to "delete", article_comment_path(article, comment), method: :delete, data: { confirm: "Are you sure !!! "}, class: "btn btn-danger"  %>
     <% end %>
 
     <% if comment.is_article_owner?(current_user) %>
       <div id="approve_<%= comment.id %>">
-        <%= link_to "approve", approve_article_comment_path(article, comment.id), remote: true, method: :patch if !comment.new_record? and !comment.approved %>
+        <%= link_to "approve", approve_article_comment_path(article, comment.id), remote: true, method: :patch, class: "btn btn-info"  if !comment.new_record? and !comment.approved  %>
       </div>
     <% end %>
     <br>
