--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,3 +1,4 @@
+
 <h3>Edit Comments</h3>
 
 <%= render 'users/welcome' %> <br>
@@ -11,13 +12,7 @@
     <%= f.text_area :body %>
   </p>
   <p>
-    <%= f.submit %><br>
+    <%= f.submit class: "btn btn-success" %><br>
   </p>
 <% end %>
 
-<br><br>
-<%= link_to "user index", users_path %>
-<br><br>
-<%= link_to "view all aritcles", articles_path %>
-<br><br>
-<%= link_to "sign_out", sign_out_users_path %>
