--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,3 +1,4 @@
+
 <h3>New Comments</h3>
 
 <%= render 'users/welcome' %>
@@ -13,7 +14,7 @@
     <%= f.text_area :body %>
   </p>
   <p>
-    <%= f.submit %><br>
+    <%= f.submit  class: "btn btn-success"  %><br>
   </p>
 <% end %>
 
@@ -23,9 +24,5 @@
 <%= link_to "view all aritcles", articles_path %>
 <br><br>
 <%= link_to "sign_out", sign_out_users_path %>
-
-
-
-
 <br><br>
 <%= link_to "comment", new_article_comment_path(@article) %>
