--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+
 <h3>Edit User Details</h3>
 
 <%= render 'welcome' %>
@@ -15,10 +16,9 @@
         Contact No<%= f.text_field :contact %>
       </p>
       <p>
-        <%= f.submit %><br>
+        <%= f.submit class: "btn btn-success"  %><br>
       </p>
     <% end %>
   </tr>
 </table>
 
-<%= render 'footer' %>
