--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,34 +1,49 @@
-<h1>User Index</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>User Index</title>
+  </head>
+  <body>
 
-<%= render 'welcome' %>
-No of users are : <%= @users.count %><br>
+  <%= render 'welcome' %>
+    No of users are : <%= @users.count %><br>
 
-<table>
-  <tr>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Contact No</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+    <table>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Contact No</th>
+        <th></th>
+        <th></th>
+        <th></th>
+      </tr>
 
-  <% @users.each do |user| %>
+      <% @users.each do |user| %>
 
-  <tr>
-    <td><%= user.first_name %></td>
-    <td><%= user.last_name %></td>
-    <td><%= user.contact %></td>
-    <td><%= link_to "view", user %></td>
-    <% if user.match_current_user(current_user) %>
-      <td><%= link_to "edit", edit_user_path(user) %></td>
-      <td><%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %></td>
-    <% end %>
-  </tr>
+      <tr>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
+        <td><%= user.contact %></td>
+        <div class="btn-group ">
+          <td><%= link_to "view", user, class: 'btn btn-info ' %></td>
+          <% if user.match_current_user(current_user) %>
+            <td><%= link_to "edit", edit_user_path(user), class: 'btn btn-warning '  %></td>
+            <td><%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger' %></td>
+          <% end %>
+        </div>
+      </tr>
 
-  <% end %>
+      <% end %>
 
-</table>
-<%= render 'footer' %>
+    </table>
+
+  </body>
+</html>
+
+
+
+
+
+
 
 
